--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    
+    <!-- BootStrap call -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- CSS call -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Photo</h1>
+    <div class="container">
+       <img src="./img/Group.png" alt="Photo">
+    </div>
+       <input name="" id="" class="btn btn-primary" type="button" value="Log in">
+       <input name="" id="" class="btn btn-primary" type="button" value="Register">
 </body>
 </html>
